--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-NEXTAUTH_SECRET=your_secret
-NEXT_PUBLIC_API_URL=http://localhost:8000
+NEXT_PUBLIC_API_URL=your_api_url
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=your_secret_key
 NODE_ENV=development
